--- a/templates/index.html
+++ b/templates/index.html
@@ -9,25 +9,33 @@
     <link rel="stylesheet" href="../static/css/styleindex.css">
     <title>Login Page</title>
 </head>
-<body style="background-color: #1C1C1C;">
+<body style="background-color: #1C1C1C;font-size: 18px;">
     <div class="container">
         <div class="row">
-            <div class="col-md-4 offset-md-4" style="background-color: #444444; border-color: #CCCCCC; border-radius: 20px">
+            <div class="col-md-8 offset-md-2" style="color: white">
+                <label style="font-size: 30px">Welcome my store</label>
+            </div>
+
+            <div class="col-md-8 offset-md-2" style="background-color: #444444; border-color: #CCCCCC; border-radius: 20px">
                     <div class="login-page">
-                        <form action="http://127.0.0.1:5000/login" method="POST" >
+                        <form action="/save-post" method="POST" >
                             <h1>Login Page</h1>
+
                             <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@gmail.com">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" name="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@gmail.com">
                             </div>
+
                             <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" name="exampleInputPassword1" placeholder="Password">
                             </div>
+
                             <div class="form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Remember account</label>
+                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">Remember account</label>
                             </div>
+
                             <button type="submit" class="btn btn-primary">Login</button>
                             <a href="#" class="forgot-pass">forgot the password ?</a>
                         </form>
