dudt commit done api login for user done api create user

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <form method="GET" action="/login">
+{#    <form method="GET" action="..login">#}
     <div class="hero-image">
         <div class="hero-text">
           <h1 style="font-size:50px">Welcome</h1>
